--- a/src/index.css
+++ b/src/index.css
@@ -13,11 +13,21 @@
 }
 
 body {
+  background-color: #dddddd;
   color: #000000;
   font-size: 1em;
   font-weight: 700;
   line-height: 1.375rem;
   font-family: 'Poppins', sans-serif;
   margin: auto;
-  background-color: #fff;
+}
+
+a {
+  color: #000000;
+  display: inline-block;
+  text-decoration: none;
+}
+
+li {
+  list-style: none;
 }
